--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,1 @@
-DB_HOST=mongodb+srv://thomasm33:<password>@cluster0.on2fl.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DB_HOST=mongodb+srv://thomasm33:ZYqU8eooilB1J33B@cluster0.on2fl.mongodb.net/Cluster0
